refactor: reuse success response schema
