# api.yml
@@ -218,81 +218,67 @@ components:
         phone_number:
           type: string
           description: User's phone number
+    AuthLoginResponseData:
+      type: object
+      required:
+        - id
+        - jwt
+      properties:
+        id:
+          x-order: 1
+          type: integer
+        jwt:
+          x-order: 2
+          type: string
     AuthLoginResponse:
+      allOf:
+        - $ref: '#/components/schemas/SuccessResponse'
+        - type: object
+          properties:
+            data:
+              $ref: '#/components/schemas/AuthLoginResponseData'
+    RegisterUserResponseData:
       type: object
       required:
-        - success
-        - message
+        - id
       properties:
-        success:
+        id:
           x-order: 1
-          type: boolean
-        message:
-          x-order: 2
-          type: string
-        data:
-          x-order: 3
-          type: object
-          required:
-            - id
-            - jwt
-          properties:
-            id:
-              x-order: 1
-              type: integer
-            jwt:
-              x-order: 1
-              type: string
+          type: integer
     RegisterUserResponse:
-      type: object
-      required:
-        - success
-        - message
-      properties:
-        success:
-          x-order: 1
-          type: boolean
-        message:
-          x-order: 2
-          type: string
-        data:
-          x-order: 3
-          type: object
-          required:
-            - id
+      allOf:
+        - $ref: '#/components/schemas/SuccessResponse'
+        - type: object
           properties:
-            id:
-              type: integer
-    GetUserProfileResponse:
-      type: object
-      required:
-        - success
-        - message
-      properties:
-        success:
-          x-order: 1
-          type: boolean
-        message:
-          x-order: 2
-          type: string
-        data:
-          x-order: 3
-          type: object
-          required:
-            - id
-            - full_name
-            - phone_number
-          properties:
-            id:
-              x-order: 1
-              type: integer
-            full_name:
-              x-order: 2
-              type: string
-            phone_number:
-              x-order: 3
-              type: string
+            data:
+              $ref: '#/components/schemas/RegisterUserResponseData'
     UpdateUserProfileResponse:
+      allOf:
+        - $ref: '#/components/schemas/SuccessResponse'
+    GetUserProfileResponseData:
+      type: object
+      required:
+        - id
+        - full_name
+        - phone_number
+      properties:
+        id:
+          x-order: 1
+          type: integer
+        full_name:
+          x-order: 2
+          type: string
+        phone_number:
+          x-order: 3
+          type: string
+    GetUserProfileResponse:
+      allOf:
+        - $ref: '#/components/schemas/SuccessResponse'
+        - type: object
+          properties:
+            data:
+              $ref: '#/components/schemas/GetUserProfileResponseData'
+    SuccessResponse:
       type: object
       required:
         - success
@@ -304,6 +290,9 @@ components:
         message:
           x-order: 2
           type: string
+        data:
+          x-order: 3
+          type: object
     ErrorResponse:
       type: object
       required:
